# object_detection_app

./: .gitignore  CMakeLists.txt  README.md  config.yaml
include/: DearImGui.hpp  Drawer.hpp  FrameQueue.hpp  ObjectDetector.hpp  OpenCVDnnInferenceEngine.hpp  OpenCVFrameCollector.hpp  OpenCVFramePostprocessor.hpp  OpenCVFramePreprocessor.hpp  OpenGLBackend.hpp  OpenVINOFramePostprocessor.hpp  OpenVINOFramePreprocessor.hpp  OpenVINOInferenceEngine.hpp
include/interfaces/: IDearImgBackend.hpp  IFrameCollector.hpp  IFramePostprocessor.hpp  IFramePreprocessor.hpp  IGui.hpp  IInferenceEngine.hpp
resources/model/: coco_colors.txt
src/: Drawer.cpp  OpenCVDnnInferenceEngine.cpp  OpenCVFrameCollector.cpp  OpenCVFramePostprocessor.cpp  OpenCVFramePreprocessor.cpp  OpenGLBackend.cpp  OpenVINOFramePostprocessor.cpp  OpenVINOFramePreprocessor.cpp  OpenVINOInferenceEngine.cpp  main.cpp
